@@ -1655,6 +1655,7 @@ cl_symbols[] = {
 {GRAY_ "STREAM-CLEAR-INPUT",NULL},
 {GRAY_ "STREAM-CLEAR-OUTPUT",NULL},
 {GRAY_ "STREAM-ELEMENT-TYPE",NULL},
+{GRAY_ "STREAM-FILE-POSITION",NULL},
 {GRAY_ "STREAM-FINISH-OUTPUT",NULL},
 {GRAY_ "STREAM-FORCE-OUTPUT",NULL},
 {GRAY_ "STREAM-FRESH-LINE",NULL},
